--- a/style.css
+++ b/style.css
@@ -97,11 +97,11 @@
     text-align: justify;
     margin: 10%;;
     border: 2px solid rgba(71, 56, 141);
-    border-radius: 25px;
+    border-radius: 20px;
     background-color: rgba(71, 56, 141);
     color: rgb(0, 0, 0);
     align-items: center;
-    box-shadow: 10px 10px;
+    box-shadow: 8px 8px 10px black;
 }
 
     .home-texto.p {
