--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@
    li {
     list-style: none;
 }
-
+    
    .site-title {
     padding: 5px 14px;
     display: flex;
-    text-align: start;
-    text-align: justify;
+    align-items: center;
+    text-align: right;
     color: white;
     align-items: flex-start;;
 }
@@ -28,7 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    height: 110px;
     background-color: rgb(0, 0, 0, 0.205);
     color: #fff;
 }
@@ -38,7 +38,7 @@
    /* LOGO */
    .logo {
     height: 60px;
-
+    margin-left: 18px;
 }
    /* NAVBAR MENU */
    .menu {
