--- a/style.css
+++ b/style.css
@@ -11,9 +11,6 @@
    a {
     text-decoration: none;
 }
-   li {
-    list-style: none;
-}
     
    .site-title {
     padding: 5px 14px;
@@ -31,6 +28,9 @@
     height: 110px;
     background-color: rgb(0, 0, 0, 0.205);
     color: #fff;
+}
+.navbar li {
+    list-style: none;
 }
    .nav-links a {
     color: #fff;
